--- a/markup/ui_SP.html
+++ b/markup/ui_SP.html
@@ -165,7 +165,7 @@
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 						<div class="quote">
 							<div class="quote-image">
-								<img src="assets/images/img01.png" alt="">
+								<img src="assets/images/img-quote-01.png" height="315" width="254" alt="">
 							</div>
 							<div class="quote-text">
 								<blockquote>
@@ -198,7 +198,7 @@
 								</p>
 							</div>
 							<div class="quote-image">
-								<img src="assets/images/img02.png" alt="">
+								<img src="assets/images/img-quote-02.png" alt="">
 							</div>
 						</div>
 					</div>
