add brand, form, scrolltop, slider, thumb

--- a/markup/index.html
+++ b/markup/index.html
@@ -5,15 +5,106 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Shophia</title>
-	<link rel="stylesheet" href="assets/css/all.css">
-	<link href='https://fonts.googleapis.com/css?family=Lato:400,700|Playfair+Display:700italic,400italic' rel='stylesheet' type='text/css'>
+	<link media="all" rel="stylesheet" href="assets/css/all.css">
+	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,700italic,900,300,300italic,400italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
 <body>	
-	<div class="font">
-		font-family: 'Lato', sans-serif;
-		font-family: 'Playfair Display', serif;
+	<div class="preheader">
+		<div class="container">
+			<div class="preheader-inner">
+				<div class="phone">
+					<i class="icon-phone"></i>
+					<p>
+						Call +001 555 801 
+					</p>
+				</div>
+				<ul class="list list-header">
+					<li><a href="#" class="text-uppercase hide">WELCOME MSG!</a></li>
+					<li><a href="#" class="text-uppercase hide">MY ACCOUNT</a></li>
+					<li><a href="#" class="text-uppercase">MY WHISTLIST</a></li>
+					<li><a href="#" class="text-uppercase">LOGIN</a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
-dfgfgfgbfhh
+	<header class="header arrow">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-3 col-xs-last col-sm-3 col-sm-last col-md-3 col-md-last col-lg-4 col-lg-first">
+					<div class="main-nav">
+						<button class="nav-toggle" id="opener">
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<ul class="nav">
+							<li><a href="#" class="text-italic">Home</a></li>
+							<li><a href="#" class="text-italic">Gallery</a></li>
+							<li><a href="#" class="text-italic">Categories</a></li>
+							<li><a href="#" class="text-italic">Pages</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-xs-9 col-sm-9 col-md-9 col-lg-4">
+					<div class="logo text-center">
+						<svg width="228pt" height="73pt" viewBox="0 0 228 73" version="1.1" xmlns="http://www.w3.org/2000/svg">
+							<g id="logo">
+								<path fill="#000000" opacity="1.00" d=" M 67.85 0.00 L 73.32 0.00 C 77.16 0.64 81.16 2.27 83.29 5.72 C 85.14 8.29 85.02 11.56 85.09 14.57 C 86.34 15.69 88.49 16.30 88.72 18.20 C 89.02 21.99 87.04 25.44 85.60 28.80 C 88.37 27.73 91.53 26.10 94.50 27.48 C 96.61 28.31 97.67 30.80 97.12 32.95 C 95.92 39.02 91.98 44.20 91.24 50.41 C 93.04 49.89 95.18 49.91 96.64 48.57 C 98.65 46.86 99.05 44.10 99.95 41.76 C 101.98 35.65 106.35 29.84 112.65 27.75 C 116.20 26.57 120.90 26.36 123.51 29.53 C 126.06 33.08 125.13 37.85 123.52 41.60 C 120.63 48.75 114.01 55.25 105.85 55.04 C 102.64 55.16 100.33 52.70 98.87 50.12 C 96.01 53.18 92.42 56.18 87.97 56.04 C 85.29 56.18 82.52 53.90 82.97 51.05 C 83.68 45.00 87.66 39.95 88.96 34.06 C 87.03 31.91 83.38 34.10 82.66 36.48 C 80.76 41.29 78.39 45.96 77.05 50.97 C 77.89 51.73 78.80 52.41 79.77 53.01 C 79.45 53.62 79.14 54.23 78.83 54.85 C 75.95 55.88 72.13 56.97 69.82 54.22 C 68.50 51.21 70.18 47.97 71.17 45.12 C 74.52 37.27 77.25 29.16 80.94 21.46 C 76.70 25.95 70.06 27.33 64.15 26.18 C 61.74 25.51 59.43 23.59 59.19 20.95 C 58.73 18.24 60.52 15.97 61.86 13.83 C 59.57 14.63 57.26 15.36 54.94 16.07 C 54.89 19.37 54.73 22.76 55.79 25.93 C 57.31 30.74 60.33 34.99 61.29 40.00 C 62.88 47.48 61.49 55.69 56.77 61.82 C 52.19 68.12 44.77 71.79 37.20 73.00 L 28.09 73.00 C 21.86 72.18 15.17 69.38 12.62 63.19 C 8.14 51.53 18.75 37.46 31.10 37.99 C 33.70 37.81 36.00 40.42 35.15 42.98 C 34.17 48.30 28.78 51.19 23.74 51.40 C 22.81 49.64 22.00 47.82 21.28 45.96 C 19.34 48.10 17.05 50.20 16.40 53.14 C 15.08 57.84 16.84 63.28 20.92 66.06 C 27.78 70.80 37.77 69.38 43.73 63.80 C 49.13 58.81 50.83 50.93 49.74 43.86 C 49.04 37.53 45.00 32.19 44.12 25.90 C 43.69 23.09 44.08 20.25 44.34 17.45 C 35.65 15.76 26.20 15.97 18.25 20.23 C 13.64 22.68 9.74 27.46 10.28 32.95 C 10.22 36.25 12.53 38.78 14.58 41.08 C 11.47 42.57 8.05 41.75 5.82 39.18 C 2.46 36.16 0.67 31.81 0.00 27.42 L 0.00 26.76 C 0.34 20.62 4.86 15.25 10.75 13.64 C 22.11 10.41 33.81 14.04 45.26 14.52 C 47.52 11.72 49.23 8.43 52.14 6.22 C 56.57 2.55 62.24 0.83 67.85 0.00 M 56.29 12.14 C 61.38 10.69 66.20 8.47 71.00 6.27 C 71.32 7.23 71.64 8.19 71.95 9.15 C 69.28 10.10 66.60 11.44 65.09 13.96 C 63.54 16.09 62.33 19.53 64.41 21.71 C 67.37 23.95 71.38 22.73 74.46 21.38 C 77.66 20.13 78.54 16.53 80.52 14.06 C 81.19 10.10 79.62 5.73 75.73 4.11 C 68.39 0.65 59.74 5.34 56.29 12.14 M 109.42 38.40 C 107.46 42.76 105.14 47.64 106.72 52.49 C 108.46 51.72 110.22 50.81 111.28 49.17 C 114.48 44.71 116.80 39.50 117.68 34.06 C 117.70 32.65 118.48 29.70 116.15 29.96 C 112.83 31.64 111.07 35.23 109.42 38.40 Z" />
+								<path fill="#000000" opacity="1.00" d=" M 162.35 15.06 C 165.41 15.15 169.78 14.07 171.52 17.41 C 172.48 21.47 170.02 25.29 168.55 28.92 C 171.27 27.65 174.49 26.10 177.46 27.47 C 179.26 28.17 180.36 30.07 180.26 31.97 C 179.52 38.42 174.87 43.75 174.36 50.23 C 178.54 50.62 181.40 47.27 182.76 43.73 C 184.37 39.70 186.31 35.76 187.16 31.48 C 186.39 31.20 184.83 30.64 184.05 30.36 C 184.67 29.21 185.29 28.05 185.91 26.90 C 189.10 26.97 194.73 26.37 194.85 30.94 C 194.35 37.71 189.75 43.37 188.67 50.03 C 191.58 50.37 195.05 49.01 195.83 45.94 C 197.46 40.00 200.31 34.03 205.36 30.27 C 209.04 27.55 214.04 25.88 218.44 27.89 C 221.40 27.52 224.39 27.41 227.38 27.52 C 224.55 35.02 220.71 42.20 218.78 50.01 C 222.32 50.69 224.82 48.15 226.91 45.73 C 227.59 47.25 227.44 48.86 226.31 50.12 C 223.64 53.82 219.01 56.65 214.33 55.89 C 212.37 55.51 211.35 53.75 210.36 52.22 C 207.46 54.38 203.97 56.96 200.14 55.75 C 197.77 55.20 196.67 52.94 195.67 50.97 C 192.67 54.02 188.47 56.86 183.99 55.80 C 182.00 55.47 181.00 53.65 180.13 52.04 C 177.13 54.56 173.23 56.86 169.17 55.77 C 166.63 55.08 165.41 52.31 166.07 49.86 C 167.32 44.37 170.62 39.59 171.96 34.13 C 170.57 32.06 167.42 33.67 166.27 35.26 C 164.35 39.14 162.99 43.29 161.21 47.24 C 160.81 48.62 159.75 50.09 160.33 51.56 C 160.96 51.88 162.23 52.52 162.86 52.84 C 162.51 53.48 162.16 54.13 161.81 54.78 C 158.96 56.02 155.11 56.92 152.80 54.19 C 151.80 52.21 152.53 49.91 153.13 47.92 C 156.51 38.85 160.51 30.01 163.76 20.90 C 164.54 19.13 162.17 18.80 161.13 18.15 C 161.54 17.12 161.94 16.09 162.35 15.06 M 207.26 37.20 C 205.13 41.49 202.06 46.21 203.86 51.16 C 206.66 51.05 209.96 50.11 211.19 47.32 C 213.44 41.79 215.51 36.19 217.79 30.67 C 212.95 28.27 209.13 33.38 207.26 37.20 Z" />
+								<path fill="#000000" opacity="1.00" d=" M 194.30 15.37 C 198.03 13.38 202.23 18.32 199.94 21.74 C 198.58 24.50 194.39 24.79 192.60 22.34 C 190.64 20.18 191.63 16.40 194.30 15.37 Z" />
+								<path fill="#000000" opacity="1.00" d=" M 129.89 26.92 C 133.29 26.87 137.70 26.53 139.09 30.48 C 141.47 28.91 143.94 26.97 146.94 26.96 C 149.95 26.79 152.98 28.98 153.37 32.06 C 154.30 37.41 151.55 42.52 148.75 46.87 C 144.91 52.74 137.23 56.85 130.31 54.09 C 129.05 57.14 127.83 60.22 127.06 63.43 C 127.76 63.73 129.18 64.33 129.89 64.64 C 129.54 65.36 129.18 66.08 128.83 66.80 C 125.96 68.04 121.82 68.98 119.77 65.90 C 119.09 63.70 119.72 61.41 120.50 59.33 C 123.81 50.80 127.57 42.45 130.76 33.88 C 131.96 31.88 129.60 31.06 128.15 30.50 C 128.73 29.31 129.31 28.12 129.89 26.92 M 138.50 34.34 C 136.47 40.28 133.55 45.88 131.72 51.90 C 133.97 52.01 136.54 52.04 138.20 50.23 C 141.76 46.55 144.24 41.82 145.68 36.93 C 146.32 35.16 145.79 33.35 145.09 31.70 C 142.67 31.96 140.44 32.88 138.50 34.34 Z" />
+							</g>
+						</svg>
+					
+					</div>
+				</div>
+				<div class="hidden-md-down col-md-3 col-lg-4">
+					<div class="hidden-wrap">
+						<ul class="list list-social">
+							<li><a href="#"><i class="icon-facebook"></i></a></li>
+							<li><a href="#"><i class="icon-twitter"></i></a></li>
+							<li><a href="#"><i class="icon-pinterest"></i></a></li>
+							<li><a href="#"><i class="icon-instagram"></i></a></li>
+						</ul>
+						<select name="select" id="select">
+							<option value="rupiah1" class="text-uppercase">
+								rupiah 
+							</option>
+							<option value="rupiah2" class="text-uppercase">
+								rupiah2 
+							</option>
+							<option value="rupiah3" class="text-uppercase">
+								rupiah3 
+							</option>
+							<option value="rupiah4" class="text-uppercase">
+								rupiah4 
+							</option>
+						</select>
+					</div>
+				</div>
+			</div>
+			<ul class="list list-nav" id="nav">
+				<li><a href="#" class="text-italic">Home</a></li>
+				<li><a href="#" class="text-italic">Gallery</a></li>
+				<li><a href="#" class="text-italic">Categories</a></li>
+				<li><a href="#" class="text-italic">Pages</a></li>
+			</ul>
+		</div>
+	</header>
+
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="assets/js/jquery.formstyler.min.js"></script>
+	<script>
+			$('#opener').on('click', function () {
+					 $('#nav').toggleClass('open')
+					})
+	</script>
+	<script>
+		$(function() {
+			$('select').styler();
+			});
+	</script>
 </body>
 </html>
