the final version

--- a/markup/index.html
+++ b/markup/index.html
@@ -558,18 +558,6 @@
 	</footer>
 	<a id="toTop" href="#logo"><i class="icon-angle-up"></i></a>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="assets/js/jquery.formstyler.min.js"></script>
-	<script src="assets/js/jquery.bxslider.min.js"></script>	
-	<script src="assets/js/index.js"></script>
-	// <script>
-	// 		$('#opener').on('click', function () {
-	// 				 $('#nav').toggleClass('open')
-	// 				})
-	// </script>
-	// <script>
-	// 	$(function() {
-	// 		$('select').styler();
-	// 		});
-	// </script>
+	<script src="assets/js/assets.js"></script>
 </body>
 </html>
